# ReVC_opencv

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp  re_task.cpp  re_task.hpp
